tests/ui/rename/test_rename_not_pair.stderr
error: Unexpected meta-item format `Path`
 --> $DIR/test_rename_not_pair.rs:5:24
  |
5 |     #[shorthand(rename(format))]
  |                        ^^^^^^

error: Unexpected meta-item format `List`
 --> $DIR/test_rename_not_pair.rs:6:24
  |
6 |     #[shorthand(rename(format(xyz)))]
  |                        ^^^^^^^^^^^
